Template, without any content, of the website to be.

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Daniel Smith Physics</title>
+  <title>Projects - Daniel Smith Physics</title>
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
   <header>  
     <div class="row">
       <div class="small-12 medium-12 large-10 large-centered columns wide-row">
-        <div class="text-center"><a href="#footie"><img src="mysmile.jpg" width="800" height="312"></a></div>
+        <div class="text-center"><a href="#footie"><img src="lariat_collab.jpg" width="800" height="312"></a></div>
         <div class="sticky contain-to-grid">
           <nav class="top-bar" data-topbar="">            
 	    <section class="top-bar-section">                     
@@ -44,7 +44,7 @@
     <div class="small-12 medium-12 large-10 large-centered columns wide-row">
       <div class="main panel">
 
-	<h4>What is a Dan Smith?</h4>
+	<h4>What is a Project?</h4>
 	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 	
       </div>
@@ -54,7 +54,7 @@
   <footer>
     <div class="row">
       <div class="small-12 medium-12 large-10 large-centered columns text-center">
-	<p id="footie"> Photo of Deepak Sethyan (left) and myself (right) in front of the <a href="http://muon-g-2.fnal.gov/"> Muon g-2 Experiment </a> at Fermilab </p>
+	<p id="footie"> Photo of the LArIAT Collaboration with Wilson Hall at Fermilab in the background</p>
       </div>
     </div>
   </footer>
