Adding first draft substance to various tabs, as well as some extra formatting.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<li class="active"><a href="index.html">About</a></li>
 		<li><a href="DanSmith_CV_May2018.pdf">CV</a></li>
 		<li><a href="projects.html">Projects</a></li>
-		<li><a href="news.html">News</a></li>
+		<li><a href="tinkering.html">Tinkering</a></li>
               </ul>
             </section>
 	  </nav>
@@ -44,9 +44,24 @@
     <div class="small-12 medium-12 large-10 large-centered columns wide-row">
       <div class="main panel">
 
-	<h4>What is a Dan Smith?</h4>
-	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-	
+	<h4>Hello! <br><br>
+
+	 Email:
+	<script>
+	  (function whatever(){
+	  var s='@',n='dansmith',k='bu.edu',e=n+s+k,l='<a href=mailto:{{spam@cia.gov}}>{{spam@fbi.gov}}</a>'.replace(/{{.+?(}})/g,e);
+	  document.write(l)})()
+	</script>
+	<NOSCRIPT>
+	   &#100;&#097;&#110;&#115;&#109;&#105;&#116;&#104;&#095;&#097;&#116;&#095;&#098;&#117;&#095;&#101;&#100;&#117;
+	</NOSCRIPT> </h4>
+
+	<p> I am Daniel Smith, a Ph.D. candidate at the University of Chicago studying experimental particle / astroparticle physics. I recently graduated from Boston University, where I worked with Prof. Ed Kearns on the neutrino LArTPC R&D experimental LArIAT and the future Hyper-K experiment. </p> 
+
+	<p> You can read more on my physics research on the <a href="projects.html">Projects tab</a>, read more on my hobby electronics and programming on the <a href="tinkering.html">Tinkering tab</a>, or email me with any questions! </p>
+
+	<!-- <p> I enjoy hobby electronics, specifically TTL-based vintage computing. </p> -->
+
       </div>
     </div>
   </div>
