--- a/tinkering.html
+++ b/tinkering.html
@@ -31,7 +31,7 @@
 		<li class="active"><a href="index.html">About</a></li>
 		<li><a href="DanSmith_CV_May2018.pdf">CV</a></li>
 		<li><a href="projects.html">Projects</a></li>
-		<li><a href="news.html">News</a></li>
+		<li><a href="tinkering.html">Tinkering</a></li>
               </ul>
             </section>
 	  </nav>
@@ -43,10 +43,29 @@
   <div class="row">
     <div class="small-12 medium-12 large-10 large-centered columns wide-row">
       <div class="main panel">
+	This page is to be filled in more in the future! 
 
-	<h4>What is a News?</h4>
-	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-	
+<!--
+	<p> Below is a chronological updated of the various projects (hobby and academic) that I am working on. May become more an online lab notebook to remind me how I got from point A to point B but may serve someones interests. </p>
+
+	<h4>Commodore 64 <span style="float:right;">  26 June 2018 </span></h4>
+	<p> Going to the local flea market, I managed to pick up a Commodore 64 for less than $20 without any original cables. I've come to learn that the power adapters for these computers were prone to failure and are relative scarces. The adapter is supposted to provide +5V and 9VAC. This confusing arrangement is supposedly for time keeping and to feed into an internal power supply that creates +12V and used the AC as timing for scanning and image to a TV screen. </p>
+	<p> Until I've figured out how to power the Commodore, I've decided not to waste time programming. I've downloaded the VICE emulator, figured out how to get BASIC code to pass from my emacs editing enviroment to the emulator, and am starting to piece together a basic (haha) understanding of the computer. 
+
+	<hr align="center" width="100%" style="border: solid #BEBEBE; border-width: 1px 0 0;"> 
+
+	<h4>New Web Page <span style="float:right;">  26 June 2018 </span></h4>
+	<p> First project to talk about is this one, the new web page. Recently learned you can create one with Github, so I thought I would simultaniously relearn HTML / CSS / Javascript and document what I am up to. The up-to-dateness and ultimate aim of the page is to be determined. </p> 
+
+	<hr align="center" width="100%" style="border: solid #BEBEBE; border-width: 1px 0 0;"> 
+
+	<h4> 74181 ALU chip simulation in Logisim <span style="float:right;"> 10 June 2018 </span></h4>
+	<p> In researching pre-microchip computers, I learned of a 4-bit ALU that was used in TTL 74-series based computers. The datasheet has the full logical schematic of the chip, which managed to have 16 logical and arthematic functions using a confusing mess of logic gates. To understand it better, I spent the time to recreate the chip in Logisim. </p>
+
+	<hr align="center" width="100%" style="border: solid #BEBEBE; border-width: 1px 0 0;"> 
+
+	<h4> Flipdot Display <span style="float:right;"> 15 May 2018 </span></h4>
+-->
       </div>
     </div>
   </div>
