--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
 		<li class="active"><a href="index.html">About</a></li>
 		<li><a href="DanSmith_CV_May2018.pdf">CV</a></li>
 		<li><a href="projects.html">Projects</a></li>
-		<li><a href="news.html">News</a></li>
+		<li><a href="tinkering.html">Tinkering</a></li>
               </ul>
             </section>
 	  </nav>
@@ -44,8 +44,45 @@
     <div class="small-12 medium-12 large-10 large-centered columns wide-row">
       <div class="main panel">
 
-	<h4>What is a Project?</h4>
-	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+	<p> Below is a list of physics experiments and projects that I have partcipated in. </p>
+
+	<hr align="center" width="100%" style="border: solid #BEBEBE; border-width: 1px 0 0;"> 
+
+	<h4>LArIAT - Liquid Argon In A Testbeam <span style="float:right;">  May 2015 - May 2018 </span></h4>
+	<p> LArIAT is a Liquid Argon Time Projection Chamber (LArTPC) research and development experiment located at the Fermi National Accelerator Laboratory. The main physics goals of the experiment in the study of known particle species in liquid argon, including fundamental cross section measurements and automatic reconstruction performance, as inputs to future, large-scale experiments such as DUNE. The experiment is composed of a 170 L LArTPC deployed in an instrumented particle beam in the lab's Test Beam Facility. The experiment’s instrumented beamline allows for the selection of known particle species - mainly electrons, muons, pions, protons, kaons and, in small number, antiprotons and dueterons - and, thus, a varied physics agenda for the experiment. </p> 
+
+<p> My contribution to the experiment are varied. My first summer on the experiment centered on the development of Time-of-flight reconstruction software, beamline PID algorithms and LArG4 simulations based on Geant4 in C / C++ using LArSoft and Root. 
+
+The next year on the project was dedicated to the efficient selection of the kaon in the beamline and then the K+ cross section analysis, work relevant to future proton decay and neutrino experiments.
+
+My last year on the project was spent working on my undergraduate work-for-distinction project that aimed to assess the current state of signal recognition and background rejection for future proton decay searches in the channel <i>p</i> &rarr; <i>K<sup>+</sup> &nu; </i>.
+
+My work on the experiment was supported by Grants through Boston University’s Undergraduate Research Opportunities Program (UROP) and my research advisor, Prof. Ed Kearns. 
+
+</p>
+
+<div style="width:image width px; font-size:80%; text-align:center;"><img src="kaon_event.png" alt="alternate text" width="width" height="height" style="padding-bottom:0.5em;" /> Left: Preliminary LArIAT K+ Data Event | Right: Automatically reconstructed tracks of the same event. </div>
+
+	<hr align="center" width="100%" style="border: solid #BEBEBE; border-width: 1px 0 0;"> 
+
+	<h4>Machine Learning in LArTPC Data Reconstruction <span style="float:right;">  January 2017 - August 2017 </span></h4>
+	<p> Through the Boston University's Geneva study abroad program, joined a group of researched at CERN to develop techniques for the application of machine learning in LArTPC data event reconstruction. Work primarily centered on the development of simulation-trained CNNs for shower / track feature-level hit separation. These algorithms were successfully verified and applied to LArIAT's beamline data, affirming that simulation-trained algorithms can be applied to data. I also demonstrated preliminary results on using generative machine learning techniques to generate realistic noise in LArTPC simulation using LArIAT data. This GAN work was presented at the <a href="https://indico.cern.ch/event/616790/contributions/2555591/attachments/1451443/2238223/iml_network.pdf"> IML Open Topic Meeting</a>, CERN's inter-experimental machine learning group. Project primarily done under the guidance of Dorota Stefan and Robert Sulej on the ProtoDUNE experiment. 
+
+	  <div style="width:image width px; font-size:80%; text-align:center;">
+	    <img src="gan_demo.png" alt="alternate text" width="width" height="height" style="padding-bottom:0.5em; padding-left:2.5em; padding-right:2.5em;" /> 
+	    Demonstration of noise-less simulation (left), simulated noise from GAN (center), and the difference (right). 
+	  </div>
+	</p>
+
+	<hr align="center" width="100%" style="border: solid #BEBEBE; border-width: 1px 0 0;"> 
+
+	<h4> Hyper-Kamiokande <span style="float:right;">  April 2015 - January 2018 </span> </h4>
+	<p>
+	  The Hyper-Kamiokande experiment is the successor to the Super-Kamiokande experiment, both water Cherenkov detectors with neutrino and proton decay physics goals. 
+	  To demonstrate the potential use of FPGA-based TDCs for data read out, I assembled and testing QTC-TDC boards, developed by Fermilab and based on an Altera development board. I developed firmware in VHDL to allow for serial-to-USB data readout to allow for data collection and analysis on a computer. 
+	</p>
+
+<!-- <img src="kaon_event.png" width="800" height="312"> -->
 	
       </div>
     </div>
