--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	   &#100;&#097;&#110;&#115;&#109;&#105;&#116;&#104;&#095;&#097;&#116;&#095;&#098;&#117;&#095;&#101;&#100;&#117;
 	</NOSCRIPT> </h4>
 
-	<p> I am Daniel Smith, a Ph.D. candidate at the University of Chicago studying experimental particle / astroparticle physics. I recently graduated from Boston University, where I worked with Prof. Ed Kearns on the neutrino LArTPC R&D experimental LArIAT and the future Hyper-K experiment. </p> 
+	<p> I am Daniel Smith, a Ph.D. candidate at the University of Chicago studying experimental particle / astroparticle physics. I recently graduated from Boston University, where I worked with Prof. Ed Kearns on the neutrino LArTPC R&D experiment LArIAT and the future Hyper-K experiment. </p> 
 
 	<p> You can read more on my physics research on the <a href="projects.html">Projects tab</a>, read more on my hobby electronics and programming on the <a href="tinkering.html">Tinkering tab</a>, or email me with any questions! </p>
 
@@ -69,7 +69,7 @@
   <footer>
     <div class="row">
       <div class="small-12 medium-12 large-10 large-centered columns text-center">
-	<p id="footie"> Photo of Deepak Sethyan (left) and myself (right) in front of the <a href="http://muon-g-2.fnal.gov/"> Muon g-2 Experiment </a> at Fermilab </p>
+	<p id="footie"> Photo of Deepak Sathyan (left) and myself (right) in front of the <a href="http://muon-g-2.fnal.gov/"> Muon g-2 Experiment </a> at Fermilab </p>
       </div>
     </div>
   </footer>
