Adding place holder names.

--- a/secret_santa/index.html
+++ b/secret_santa/index.html
@@ -4,9 +4,9 @@
     <title>"Secret" Santa </title>
     
     <script>
-      var secret_numbers = [1, 2, 3];
-      var giver_names = ["Dan", "Dannio", "Sir Daniel"];
-      var taker_names = ["Danio", "Sir Daniel", "Dan"];
+      var secret_numbers = [1234, 4321];
+      var giver_names = ["Sir Daniel", "Madison"];
+      var taker_names = ["Madison", "Sir Daniel"];
     </script>
 
   </head>  
