Fixed giver_name bug

--- a/secret_santa/index.html
+++ b/secret_santa/index.html
@@ -4,8 +4,8 @@
     <title>"Secret" Santa </title>
     
     <script>
-      var names_giver = ['Sir Dan Smith', 'Maybe Ted', 'Patrick', 'Jennnnnnnnnnnnnnnnnnnn', 'Don Jr.', 'Andrea', 'Fireman Dan', 'Kenzie', 'Willie', 'Jill', 'Mads']
-      var names_taker = ['Maybe Ted', 'Jennnnnnnnnnnnnnnnnnnn', 'Willie', 'Sir Dan Smith', 'Andrea', 'Mads', 'Don Jr.', 'Jill', 'Fireman Dan', 'Patrick', 'Kenzie']
+      var giver_names = ['Sir Dan Smith', 'Maybe Ted', 'Patrick', 'Jennnnnnnnnnnnnnnnnnnn', 'Don Jr.', 'Andrea', 'Fireman Dan', 'Kenzie', 'Willie', 'Jill', 'Mads']
+      var taker_names = ['Maybe Ted', 'Jennnnnnnnnnnnnnnnnnnn', 'Willie', 'Sir Dan Smith', 'Andrea', 'Mads', 'Don Jr.', 'Jill', 'Fireman Dan', 'Patrick', 'Kenzie']
       var secret_numbers = [1032, 2386, 260, 1412, 1963, 1143, 1520, 1166, 1200, 1524, 3999]
     </script>
 
