Final secret numbers

--- a/secret_santa/index.html
+++ b/secret_santa/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <title>"Secret" Santa </title>
+
+    <! --
+     Don't look here unless you want to break the fascade of how secret everything is. 
+      -- > 
     
     <script>
-      var giver_names = ['Sir Dan Smith', 'Maybe Ted', 'Patrick', 'Jennnnnnnnnnnnnnnnnnnn', 'Don Jr.', 'Andrea', 'Fireman Dan', 'Kenzie', 'Willie', 'Jill', 'Mads']
-      var taker_names = ['Maybe Ted', 'Jennnnnnnnnnnnnnnnnnnn', 'Willie', 'Sir Dan Smith', 'Andrea', 'Mads', 'Don Jr.', 'Jill', 'Fireman Dan', 'Patrick', 'Kenzie']
-      var secret_numbers = [1032, 2386, 260, 1412, 1963, 1143, 1520, 1166, 1200, 1524, 3999]
+      var names_giver = ['Don Jr.', 'Willie', 'Patrick', 'Kenzie', 'Jill', 'Fireman Dan', 'Andrea', 'Jennnnnnnnnnnnnnnnnnnn', 'Mads', 'Sir Dan Smith']
+      var names_taker = ['Jennnnnnnnnnnnnnnnnnnn', 'Jill', 'Kenzie', 'Willie', 'Fireman Dan', 'Mads', 'Patrick', 'Sir Dan Smith', 'Don Jr.', 'Andrea']
+      var secret_numbers = [713, 1881, 2371, 288, 3744, 2502, 2287, 3292, 4033, 3181]
     </script>
 
   </head>  
