Fixed name error

--- a/secret_santa/index.html
+++ b/secret_santa/index.html
@@ -8,8 +8,8 @@
       -- > 
     
     <script>
-      var names_giver = ['Don Jr.', 'Willie', 'Patrick', 'Kenzie', 'Jill', 'Fireman Dan', 'Andrea', 'Jennnnnnnnnnnnnnnnnnnn', 'Mads', 'Sir Dan Smith']
-      var names_taker = ['Jennnnnnnnnnnnnnnnnnnn', 'Jill', 'Kenzie', 'Willie', 'Fireman Dan', 'Mads', 'Patrick', 'Sir Dan Smith', 'Don Jr.', 'Andrea']
+      var giver_names = ['Don Jr.', 'Willie', 'Patrick', 'Kenzie', 'Jill', 'Fireman Dan', 'Andrea', 'Jennnnnnnnnnnnnnnnnnnn', 'Mads', 'Sir Dan Smith']
+      var taker_names = ['Jennnnnnnnnnnnnnnnnnnn', 'Jill', 'Kenzie', 'Willie', 'Fireman Dan', 'Mads', 'Patrick', 'Sir Dan Smith', 'Don Jr.', 'Andrea']
       var secret_numbers = [713, 1881, 2371, 288, 3744, 2502, 2287, 3292, 4033, 3181]
     </script>
 
