Changed the message.

--- a/secret_santa/index.html
+++ b/secret_santa/index.html
@@ -55,8 +55,8 @@
 	      if(index == -1) {
 		  text = "Invalid Secret Number.";
 	      } else {
-		  text = "<p> Hello, <strong>"+giver_names[index]+"</strong>. How have you been? Why haven't you called? I only hear from you once a year when it comes time for secret santa. I find that odd. Anyway, I've been bad. Thanks for asking. <\p>";
-		  text +="<p> You are supposed to now find an impersonal gift for <strong>"+taker_names[index]+"</strong>. The limit is 20 impersonal dollars. Good luck and happy fucking holidays. </p>"
+		  text = "<p> Hello, <strong>"+giver_names[index]+"</strong>. If this isn't your name, Dan screwed up and you should tell him. <\p>";
+		  text +="<p> You are supposed to now find a gift for <strong>"+taker_names[index]+"</strong>. The limit is $20. Good luck. </p>"
 	      }
 
 	  }
